WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99613
[EFL][WK2] Compilation warning in Ewk_View when accelerated compositing is disabled
https://bugs.webkit.org/show_bug.cgi?id=99613
Summary
[EFL][WK2] Compilation warning in Ewk_View when accelerated compositing is di...
Chris Dumez
Reported
2012-10-17 10:43:38 PDT
needsNewSurface variable in _ewk_view_smart_calculate() is defined but not used if the ACCELERATED_COMPOSITING flag is not set.
Attachments
Patch
(1.44 KB, patch)
2012-10-17 10:45 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-10-17 10:45:16 PDT
Created
attachment 169213
[details]
Patch
Yael
Comment 2
2012-10-17 10:59:15 PDT
LGTM. Sorry about that.
WebKit Review Bot
Comment 3
2012-10-17 15:08:27 PDT
Comment on
attachment 169213
[details]
Patch Clearing flags on attachment: 169213 Committed
r131653
: <
http://trac.webkit.org/changeset/131653
>
WebKit Review Bot
Comment 4
2012-10-17 15:08:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug