[EFL][WK2] Compilation warning in Ewk_View when accelerated compositing is disabled https://bugs.webkit.org/show_bug.cgi?id=99613

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-10-17
Reviewed by Kenneth Rohde Christiansen.

Fix compilation warning in _ewk_view_smart_calculate() when
the ACCELERATED_COMPOSITING flag is not set.

* UIProcess/API/efl/ewk_view.cpp:
(_ewk_view_smart_calculate):

Canonical link: https://commits.webkit.org/117608@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131653 268f45cc-cd09-0410-ab3c-d52691b4dbfc